major style update, removed all non i18n phrases from code (hopefully)...
student analytics labels are changeed to black for the white background.
style update removing most of the orange borders.
removed all of the non i18n phrases from the code so it should just be awaits
moved some of the untranslated strings into the i18n config file.
changed white spacing to make things more balanced (margins are now equal, for example).

NOTE: this is not finished, there are a few things that still need styling

--- a/frontend/src/scss/components/_buttons.scss
+++ b/frontend/src/scss/components/_buttons.scss
@@ -61,7 +61,9 @@
 	margin: 9.2px;
 	padding: 0.5em 1em;
 	align-items: center;
-	border: 1px solid $bcn_light_orange;
+	background: #fafafa;
+	font-weight: 400;
+	border: 2px solid $border_color;
 
 	&:hover {
 		cursor: pointer;
