--- a/frontend/src/scss/components/_prompt.scss
+++ b/frontend/src/scss/components/_prompt.scss
@@ -1,7 +1,7 @@
 #prompt {
 	position: fixed;
 	padding: 1em;
-	border: 1px solid $bcn-light-orange;
+	border: 2px solid $border_color;
 	margin-top: -1px;
 	align-self: center;
 	background: white;
