--- a/frontend/src/scss/components/lesson_manager/_assign_options.scss
+++ b/frontend/src/scss/components/lesson_manager/_assign_options.scss
@@ -13,5 +13,6 @@
 }
 
 .students-container, .groups-container {
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
 }
