--- a/frontend/src/scss/variables/_colours.scss
+++ b/frontend/src/scss/variables/_colours.scss
@@ -15,4 +15,5 @@ $secondary_element_colour: #3b4f61;
 // colours
 $bcn_light_orange: #e87f62;
 
+$border_color: #f5f5f5;
 $placeholder_colour: #4f585f;
