--- a/frontend/src/scss/components/_loading.scss
+++ b/frontend/src/scss/components/_loading.scss
@@ -11,8 +11,7 @@
         text-align: center;
         position: absolute;
         background: rgba(white, 0.75);
-        border: 1px solid rgba($bcn-light-orange, 0.7);
-        box-shadow: 0 1px 1px rgba($primary_element_background, 0.5);
+        border: 2px solid rgba($border_color, 0.7);
         padding: 1em 2em;
         top: 2em;
 
