--- a/frontend/src/scss/components/_tile.scss
+++ b/frontend/src/scss/components/_tile.scss
@@ -1,6 +1,7 @@
 .tile {
 	flex-grow: 1;
 	margin: 0 0.5em;
+	border: 2px solid $border_color;
 
 	@media screen and (max-width: 39.9375em) {
 		margin: 0.25em 0;
@@ -8,10 +9,10 @@
 
 	> .title {
 		padding: 0.75em 1em;
-		background: $primary_element_background;
-		border-bottom: 2px solid #a9b5c0;
-		color: $secondary_font_colour;
+		background: $border_color;
+		color: #000;
 		font-size: 1.2em;
+		font-weight: 400;
 		letter-spacing: 1px;
 		display: flex;
 		justify-content: space-between;
@@ -32,8 +33,8 @@
 
 	.content {
 		padding: 0.5em;
-		background: $secondary_element_colour;
-		color: $secondary_font_colour;
+		background: transparent;
+		color: #000;
 		flex-grow: 1;
 
 		.content-title {
