--- a/frontend/src/scss/components/student/_student_analytics.scss
+++ b/frontend/src/scss/components/student/_student_analytics.scss
@@ -34,6 +34,10 @@
     display: block;
 }
 
+#student-analytics {
+    margin-top: 0;
+}
+
 .student-analytics-title {
     display: block;
 }
@@ -51,7 +55,7 @@
 
 .quest-box {
     margin: 0.25em;
-    background: #f5f5f5;
+    background: $border_color;
     padding: 1em;   
     display: block;
 }
