--- a/frontend/src/scss/components/_buttons.scss
+++ b/frontend/src/scss/components/_buttons.scss
@@ -63,7 +63,7 @@
 	align-items: center;
 	background: #fafafa;
 	font-weight: 400;
-	border: 2px solid $border_color;
+	border: 2px solid #a9b5c0;
 
 	&:hover {
 		cursor: pointer;
