--- a/frontend/src/scss/components/_containers.scss
+++ b/frontend/src/scss/components/_containers.scss
@@ -9,7 +9,7 @@
 
 .group-list-container {
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 25% 25% 25% 25%;
 }
 
 #group-students-container {
@@ -17,9 +17,41 @@
 	grid-template-columns: 50% 50%;
 }
 
+.result-container {
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+}
+
 .student-list-container {
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 33% 33% 33%;
+}
+
+.create-group-box {
+	display: flex;
+
+	// fixme!
+	padding: 0.83em !important;
+	background: $border_color;
+
+	// fixme.
+	justify-content: space-around !important;
+
+	h2 {
+		margin: 0;
+	}
+}
+
+.create-student-box {
+	display: flex;
+	justify-content: space-around;
+	padding: 0;
+	background: $border_color;
+
+	h1 {
+		font-size: 2.5em;
+		margin: 0.68em;
+	}
 }
 
 .student-box {
@@ -45,7 +77,7 @@
 
             h3 {
                 margin: 0 0 0.2em;
-                font-weight: bold;
+                font-weight: 400;
                 font-size: 1.5em;
 			}
 			
