--- a/frontend/src/scss/components/_buttons.scss
+++ b/frontend/src/scss/components/_buttons.scss
@@ -93,15 +93,11 @@
 	margin: 0.75em;
 	padding: 0.75em;
 	color: white;
-	border: 2px solid darken($bcn_light_orange, 30%);
-	background: darken($bcn_light_orange, 20%);
+	border: 2px solid $border_color;
+	background: $bcn_light_orange;
 	text-shadow: 0 0 1px rgba($primary_font_colour, 0.15);
 	font-weight: 400;
-
-	&:hover {
-		cursor: pointer;
-		background: darken($bcn_light_orange, 15%);
-	}
+	cursor: pointer;
 }
 
 .button-submit {
