fixed styling of students assigned glp buttons

--- a/frontend/src/scss/components/_containers.scss
+++ b/frontend/src/scss/components/_containers.scss
@@ -113,6 +113,13 @@
 
 	border-left: 4px solid $border_color;
 
+	.toolbar {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+	}
+
     > .title {
 		h3 {
             margin: 0;
