assigned glps in group have same styles as students assigned glps

--- a/src/scss/components/student/_student_profile.scss
+++ b/src/scss/components/student/_student_profile.scss
@@ -88,7 +88,9 @@
 	}
 
 	.toolbar {
-		justify-content: flex-end;
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
 
 		a.item {
 			@extend .link-underline;
