--- a/src/scss/components/_containers.scss
+++ b/src/scss/components/_containers.scss
@@ -15,6 +15,7 @@
 #group-students-container {
 	display: grid;
 	grid-template-columns: 50% 50%;
+	padding: 1em;
 }
 
 .result-container {
@@ -159,6 +160,10 @@
 	border: 2px solid $border_color;
 
 	.toolbar {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+
 		a.item {
 			@extend .link-underline;
 			padding: 0.1em;
@@ -171,6 +176,10 @@
 	.title {
 		padding: 0.9em;
 		background: $border_color;
+
+		.full-width {
+			width: 100%;
+		}
 	}
 	
 	> .title {
