split up assign page into tabs, started to squash missions/quests into one page

--- a/src/scss/components/lesson_manager/_assign_options.scss
+++ b/src/scss/components/lesson_manager/_assign_options.scss
@@ -47,5 +47,6 @@
 
 .students-container, .groups-container {
     display: grid;
-    grid-template-columns: 32% 32% 32%;
+    grid-template-columns: repeat(3, 33%);
+    width: 100%;
 }
