--- a/src/scss/fonts/fontello.css
+++ b/src/scss/fonts/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello-beaconing';
-  src: url('fontello-beaconing.eot?52018692');
-  src: url('fontello-beaconing.eot?52018692#iefix') format('embedded-opentype'),
-       url('fontello-beaconing.woff2?52018692') format('woff2'),
-       url('fontello-beaconing.woff?52018692') format('woff'),
-       url('fontello-beaconing.ttf?52018692') format('truetype'),
-       url('fontello-beaconing.svg?52018692#fontello-beaconing') format('svg');
+  src: url('../../fonts/fontello-beaconing.eot?52018692');
+  src: url('../../fonts/fontello-beaconing.eot?52018692#iefix') format('embedded-opentype'),
+       url('../../fonts/fontello-beaconing.woff2?52018692') format('woff2'),
+       url('../../fonts/fontello-beaconing.woff?52018692') format('woff'),
+       url('../../fonts/fontello-beaconing.ttf?52018692') format('truetype'),
+       url('../../fonts/fontello-beaconing.svg?52018692#fontello-beaconing') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,47 +14,47 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'fontello-beaconing';
-    src: url('fontello-beaconing.svg?52018692#fontello-beaconing') format('svg');
+    font-family: 'fonts-beaconing';
+    src: url('fonts-beaconing.svg?52018692#fonts-beaconing') format('svg');
   }
 }
 */
- 
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello-beaconing";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-home:before { content: '\e800'; } /* '' */
 .icon-book:before { content: '\e801'; } /* '' */
 .icon-chart-bar:before { content: '\e802'; } /* '' */
