--- a/src/scss/fonts/_fontello.scss
+++ b/src/scss/fonts/_fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello-beaconing';
-  src: url('../../fonts/fontello-beaconing.eot?52018692');
-  src: url('../../fonts/fontello-beaconing.eot?52018692#iefix') format('embedded-opentype'),
-       url('../../fonts/fontello-beaconing.woff2?52018692') format('woff2'),
-       url('../../fonts/fontello-beaconing.woff?52018692') format('woff'),
-       url('../../fonts/fontello-beaconing.ttf?52018692') format('truetype'),
-       url('../../fonts/fontello-beaconing.svg?52018692#fontello-beaconing') format('svg');
+  src: url('../fonts/fontello-beaconing.eot?52018692');
+  src: url('../fonts/fontello-beaconing.eot?52018692#iefix') format('embedded-opentype'),
+       url('../fonts/fontello-beaconing.woff2?52018692') format('woff2'),
+       url('../fonts/fontello-beaconing.woff?52018692') format('woff'),
+       url('../fonts/fontello-beaconing.ttf?52018692') format('truetype'),
+       url('../fonts/fontello-beaconing.svg?52018692#fontello-beaconing') format('svg');
   font-weight: normal;
   font-style: normal;
 }
