move more localisation over to use the new api, assigning students to groups now has a tab pane + a search bar

--- a/src/scss/components/lesson_manager/_assign_options.scss
+++ b/src/scss/components/lesson_manager/_assign_options.scss
@@ -12,6 +12,12 @@
     }
 }
 
+.filter-assign {
+    border: 2px solid $border_color;
+    padding: 1em 2em;
+    margin-bottom: 0.5em;
+}
+
 #assign-tabs {
     margin-top: 0.5em;
     border-bottom: 1px solid #e1e4e8;
