--- a/src/scss/components/lesson_manager/_headers.scss
+++ b/src/scss/components/lesson_manager/_headers.scss
@@ -16,7 +16,7 @@
         background: #f8f8f8;
 
         &.delete {
-            color: #B20601;
+            color: $error_red;
             border: 2px solid #F9CFCE;
         }
 
