--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -104,8 +104,8 @@
 	margin: 0.75em;
 	padding: 0.75em;
 	color: white;
-	border: 2px solid darken(#17783a, 5%);
-	background: #17783a;
+	border: 2px solid darken($success_green, 5%);
+	background: $success_green;
 	text-shadow: 0 0 1px rgba($primary_font_colour, 0.15);
 	font-weight: 400;
 
@@ -121,6 +121,6 @@
 
 	&:hover {
 		cursor: pointer;
-		background: lighten(#17783a, 5%);
+		background: lighten($success_green, 5%);
 	}
 }
