--- a/src/scss/variables/_colours.scss
+++ b/src/scss/variables/_colours.scss
@@ -15,5 +15,15 @@ $secondary_element_colour: #3b4f61;
 // colours
 $bcn_light_orange: #e87f62;
 
+$error_red: #e53935;
+$error_red_border: #ef9a9a;
+
+$success_green: #43a047;
+$success_green_border: #a5d6a7;
+
+$neutral_blue: #1e88e5;
+$neutral_blue_border: #90caf9;
+
 $border_color: #f5f5f5;
+
 $placeholder_colour: #4f585f;
